# apodmgr

./: README.md  pyproject.toml
src/apodmgr/: __init__.py  __main__.py  apod.py  mgrcfg.py  set_bg.py
